--- a/resume/index.html
+++ b/resume/index.html
@@ -276,6 +276,20 @@ a reliable way. There's something very satisfying about being able to say, "A fe
 or, "An upstream process failed? Don't worry -- the system will retry and recover eventually." I also enjoy
 exploring and visualizing them.</p>
 <h2>Employment</h2>
+<h3>Data Engineer, Showroom Logic</h3>
+<h4>June 2015 - Present</h4>
+<p>I'm currently responsible for architecting and implementing our data pipeline using Python and AWS (Elastic Beanstalk, CloudFormation, Simple Workflow, S3, RDS).</p>
+<h3>Instructor, NYCDA (part time)</h3>
+<h4>December 2015 - Present</h4>
+<p>I teach entry-level development courses in Philly.</p>
+<p>Courses taught:</p>
+<ul>
+<li>WebDev 100, Dec 2015 - Mar 2016</li>
+</ul>
+<h3>Open Source Developer III, NRG (contract)</h3>
+<h4>April 2015 - May 2015</h4>
+<p>I was the developer lead of a team that was charged with implementing a new pricing system.  This system's job is to set the price for electricity for all of NRG's customers while following federal, state, and local utility pricing regulations.</p>
+<p>I was doing this using Python 3, the Django REST Framework, and AWS.</p>
 <h3>Software Engineer, 50onRED</h3>
 <h4>Sep 2013 - Mar 2015</h4>
 <p>I manage our automated ETL processes. These processes involve processing a few terabytes per week of log
