Power of Completion article plus a resume update

--- a/resume/index.html
+++ b/resume/index.html
@@ -266,7 +266,12 @@
 <p>Senior data engineer, skydiver, and pilot</p>
 <h2>Summary</h2>
 <p>I'm a seasoned data/software engineer that specializes in data pipelines and distributed processing. My main tools, in no particular order, are Python, Scala, and AWS. I have a track record of being effective at working remotely, automating development operations, and building elastic systems. </p>
+<p>In my free time, I'm a pilot and skydiver. I try to spend as much time in the sky as possible.</p>
 <h2>Employment</h2>
+<h3>Senior Data Engineer, Disney Streaming (contract via Korn Ferry)</h3>
+<h4>October 2023 - Current</h4>
+<p>I currently operate on a team that is responsible for collecting, sanitizing, aggregating, and reporting on Disney Streaming's messaging efforts. I'm responsible for developing and overseeing part of our message reporting pipeline.</p>
+<p>I did this using Python, Spark, and Snowflake as the base of our systems. This all runs on AWS using S3 and Databricks.</p>
 <h3>Senior Data Engineer, Even Financial (now Engine by MoneyLion)</h3>
 <h4>May 2022 - March 2023</h4>
 <p>I was a senior data engineer on Engine's (formerly Even Financial) platform team. One of my primary responsibilities was developing a RESTful API that delivered analytics data for one of our business segments to various dashboards that served our clients, allowing them to track their financials and earnings. I was also a member of our data chapter and shared responsibility for our central Redshift data warehouse and the system that aggregated data into it. This involved working as part of an on-call rotation to ensure that SLAs were met and that issues and outages were dealt with promptly.</p>
@@ -339,7 +344,7 @@ context.</p>
 IntelliJ, Ansible</p>
 <h3>Machine Learning Engineer, ColdLight Solutions</h3>
 <h4>Sep 2012 - Sep 2013</h4>
-<p>I worked on all kinds of awesome big data/cloud stuff.</p>
+<p>I have worked on all kinds of awesome big data/cloud stuff.</p>
 <p>Part of my job entails writing Map/Reduce jobs to
 do ETL and transformation operations on large data sets. These are usually operations that are difficult or
 slow to do with a RDBMS or tools like Pig. Currently, I'm using Hadoop 1.0.x running on Amazon's EMR
