--- a/tags.html
+++ b/tags.html
@@ -280,7 +280,7 @@
         <li><a href="https://brianstempin.com/tag/dotstar.html">DotStar</a> (1)</li>
         <li><a href="https://brianstempin.com/tag/ebay.html">eBay</a> (1)</li>
         <li><a href="https://brianstempin.com/tag/effective-java.html">Effective Java</a> (1)</li>
-        <li><a href="https://brianstempin.com/tag/entrepreneurialism.html">entrepreneurialism</a> (1)</li>
+        <li><a href="https://brianstempin.com/tag/entrepreneur.html">entrepreneur</a> (1)</li>
         <li><a href="https://brianstempin.com/tag/fiesta.html">Fiesta</a> (1)</li>
         <li><a href="https://brianstempin.com/tag/firebug.html">Firebug</a> (1)</li>
         <li><a href="https://brianstempin.com/tag/for-sale.html">for sale</a> (1)</li>
