--- a/resume/index.html
+++ b/resume/index.html
@@ -285,7 +285,7 @@
 <li>Handling background/long-running tasks</li>
 </ul>
 <p>This was done using Python 3, FastAPI, Heroku, AWS, Postgres, and Snowflake.</p>
-<h3>Senior Software Engineer, Disqo</h3>
+<h3>Senior Data Engineer, Disqo</h3>
 <h4>January 2021 - October 2021</h4>
 <p>I was a senior engineer that operated on a team of 5-7 engineers to create and operate a data pipeline that delivered data directly to our customers. This data consisted of web browsing behaviors that users opted into sending us. For each customer, we maintained a configuration of which fields and subsets of data they were interested in. These configurations were read every day in order to read through our corpus of data, filter the correct rows, filter the correct fields, and ultimately deliver these "reports" or "slices" to a customer to feed their internal data pipelines.</p>
 <p>This was done using Scala, Spark, and several Amazon service(S3, EMR, Step Functions, Lambdas).</p>
